--- a/ToDoApp/Pages/Index.razor
+++ b/ToDoApp/Pages/Index.razor
@@ -9,7 +9,7 @@
 <h1>To Do App</h1>
 <div class="todo-input">
 	<input type="text" @bind="toDoInput"/>
-	<button style="background-color:#24a0ed" @onclick="AddToDo">Add</button>
+	<button style="background-color:#202020" @onclick="AddToDo">Add</button>
 </div>
 @for(int i=0;i<addedItems.Count;i++)
 	{
